--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -38,15 +38,19 @@ layout: default
       </div>
     {% endif %}
 
-    <div class="clearfix">{{ content }}</div>
+    <div style="display: flex;">
+        <div class="clearfix" style="font-size: 18pt; flex: 0 0 50%;">{{ content }}</div>
 
-    <!-- News -->
-    {% if page.news and site.announcements.enabled %}
-      <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
-      </h2>
-      {% include news.liquid limit=true %}
-    {% endif %}
+        <!-- News -->
+        <div style="flex: 1;">
+            {% if page.news and site.announcements.enabled %}
+                <h2>
+                    <a href="{{ '/news/' | relative_url }}" style="color: inherit">News</a>
+                </h2>
+                {% include news.liquid limit=true %}
+            {% endif %}
+        </div>
+    </div>
 
     <!-- Latest posts -->
     {% if page.latest_posts %}
