--- a/_layouts/main.liquid
+++ b/_layouts/main.liquid
@@ -3,15 +3,17 @@ layout: default
 ---
 <div class="post">
   <article>
-    <div class="clearfix">{{ content }}</div>
+    <div class="clearfix" style="font-size: 16pt;">{{ content }}</div>
 
     <!-- News -->
-    {% if page.news and site.announcements.enabled %}
-      <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
-      </h2>
-      {% include news.liquid limit=true %}
-    {% endif %}
+    <div style="flex: 1;">
+        {% if page.news and site.announcements.enabled %}
+            <h2>
+                <a href="{{ '/news/' | relative_url }}" style="color: inherit">News</a>
+            </h2>
+            {% include news.liquid limit=true %}
+        {% endif %}
+    </div>
 
     <!-- Latest posts -->
     {% if page.latest_posts %}
