--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -668,7 +668,7 @@ footer.sticky-bottom {
     text-align: right;
   }
 
-  ol.bibliography {
+  ol.bibliography, .bibliography-style {
     list-style: none;
     padding: 0;
     margin-top: 0;
